# uni_lessons_da_and_ml

./: README.md  pyproject.toml
src/:  boosting.ipynb  .gitignore  Attestation_1.ipynb  Attestation_2.ipynb  adult salary computing.ipynb  adult salary graphics.ipynb  basics_numpy.ipynb  basics_pandas.ipynb  car selling price.ipynb  clustering.ipynb  ensembles.ipynb  legendary pokemon decision tree.ipynb  legendary pokemon knn.ipynb  legendary pokemon logistic regression.ipynb  legendary pokemon svm.ipynb  linear_dimensionality_reduction.ipynb  nlp_preprocessing.ipynb  statistics.ipynb  tf_idf_word2vec.ipynb
src/Attestation3/: Attestation3.ipynb
src/Attestation3/benchmark/: README.md  benchmark_utils.py  main.py
src/Attestation3/benchmark/benchmark_dataset/: project-1-at-2025-11-30-21-28-28ca6ab2.json
src/basics/: classification_metrics.ipynb  knn.ipynb  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  seaborn.ipynb
src/basics/database/: Dockerfile  customer_statistic.sql  customer_statistic_202505100007.csv  docker-compose.yaml  task.md
src/basics/torch/: convolution.ipynb
src/torch_learning/: .gitignore  autoencoders.ipynb  legendary_pokemon.ipynb  rnn.ipynb  seq2seq.ipynb
