[project]
name = "uni-lessons-da-and-ml"
version = "0.1.0"
description = "Learning about data analysis and machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.28.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pyright>=1.1.400", "ruff>=0.11.7", "uv>=0.6.17"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ['T201']

[tool.pyright]
strict = ['src']
