[project]
name = "uni-lessons-da-and-ml"
version = "0.1.0"
description = "Learning about data analysis and machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "catboost>=1.2.8",
  "ipywidgets>=8.1.7",
  "lightgbm>=4.6.0",
  "lightning[cpu]>=2.5.3",
  "matplotlib>=3.10.1",
  "notebook>=7.4.4",
  "pandas>=2.2.3",
  "plotly>=6.0.1",
  "polars>=1.28.0",
  "protobuf>=6.32.1",
  "sacrebleu>=2.5.1",
  "sacremoses[cu128]>=0.1.1",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "sentencepiece[cu128]>=0.2.1",
  "statsmodels>=0.14.5",
  "tensorboard>=2.20.0",
  "tokenizers[cpu]>=0.22.1",
  "torchmetrics>=1.8.0",
  "torchsummary[cu128]>=1.5.1",
  "tqdm>=4.67.1",
  "transformers>=4.56.2",
  "xgboost>=3.0.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pyright>=1.1.400", "ruff>=0.11.7", "uv>=0.6.17"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ['T201']

[tool.pyright]
strict = ['src']

[project.optional-dependencies]
cpu = ["torch>=2.7.0", "torchvision>=0.22.0"]
cu128 = ["torch>=2.7.0", "torchvision>=0.22.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
